--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -57,6 +57,13 @@
 .product-list ul{
   margin: 0;
 }
+.search-product-box{
+  width: 400px;
+  margin: 20px;
+  height: 40px;
+  border: 1px solid skyblue;
+  padding-left: 20px;
+}
 .nav-ul {
   margin: 0;
   background-color: skyblue;
